--- a/final-project/CurrencyConverter/Base.lproj/Main.storyboard
+++ b/final-project/CurrencyConverter/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -13,11 +13,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CurrencyConverter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tdj-1O-UjX">
-                                <rect key="frame" x="0.0" y="416" width="414" height="480"/>
+                                <rect key="frame" x="0.0" y="332" width="375" height="480"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="eur-flag" translatesAutoresizingMaskIntoConstraints="NO" id="G7A-Vc-MOD">
                                         <rect key="frame" x="20" y="30" width="88" height="62"/>
@@ -27,7 +27,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EUR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Mx-TM-AJK">
-                                        <rect key="frame" x="116" y="30" width="278" height="30"/>
+                                        <rect key="frame" x="116" y="30" width="239" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="6fT-Ne-AbP"/>
                                         </constraints>
@@ -35,8 +35,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1.00" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="N6O-QQ-FxE">
-                                        <rect key="frame" x="129" y="96" width="265" height="50"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0.00" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="N6O-QQ-FxE">
+                                        <rect key="frame" x="116" y="96" width="239" height="50"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="oVB-ZV-LfE"/>
@@ -48,13 +48,13 @@
                                         </connections>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Euro" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GXU-EN-2QI">
-                                        <rect key="frame" x="116" y="68" width="278" height="18"/>
+                                        <rect key="frame" x="116" y="68" width="239" height="18"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                         <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="equals" translatesAutoresizingMaskIntoConstraints="NO" id="buW-bO-GSW">
-                                        <rect key="frame" x="38" y="110" width="52" height="28"/>
+                                        <rect key="frame" x="51" y="110" width="26" height="14"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" name="light-purple"/>
@@ -76,21 +76,24 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mcB-7N-AZb" userLabel="Convert Button">
-                                <rect key="frame" x="310" y="374" width="84" height="84"/>
+                                <rect key="frame" x="271" y="290" width="84" height="84"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="84" id="VHa-8p-0Eg"/>
                                     <constraint firstAttribute="width" constant="84" id="nlt-Wy-1Ns"/>
                                 </constraints>
                                 <state key="normal" image="convert-button"/>
+                                <connections>
+                                    <action selector="convertFromIDRtoEUR:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Qy-sv-OTz"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="indonesia-flag" translatesAutoresizingMaskIntoConstraints="NO" id="b7E-gI-tFN">
-                                <rect key="frame" x="20" y="144" width="88" height="124"/>
+                                <rect key="frame" x="20" y="144" width="88" height="62"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="88" id="7j5-ZA-R1e"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="IDR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lNJ-sl-viK">
-                                <rect key="frame" x="116" y="144" width="278" height="30"/>
+                                <rect key="frame" x="116" y="144" width="239" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="j43-aD-aC0"/>
                                 </constraints>
@@ -98,8 +101,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="15136.72" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Rf0-S6-pjG">
-                                <rect key="frame" x="116" y="210" width="278" height="50"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0.00" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Rf0-S6-pjG">
+                                <rect key="frame" x="116" y="210" width="239" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Z72-GE-iCQ"/>
@@ -111,7 +114,7 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Indonesian Rupiah" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLp-PX-HF7">
-                                <rect key="frame" x="116" y="182" width="278" height="18"/>
+                                <rect key="frame" x="116" y="182" width="239" height="18"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                 <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -140,8 +143,8 @@
                     </view>
                     <navigationItem key="navigationItem" title="Currency Converter" id="3N0-cb-taV"/>
                     <connections>
-                        <outlet property="fromLabel" destination="Rf0-S6-pjG" id="mNI-9O-DFZ"/>
-                        <outlet property="toLabel" destination="N6O-QQ-FxE" id="C58-Sr-cgQ"/>
+                        <outlet property="eurTextField" destination="N6O-QQ-FxE" id="C58-Sr-cgQ"/>
+                        <outlet property="idrTextField" destination="Rf0-S6-pjG" id="mNI-9O-DFZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
